<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="@dimen/widget_size_65"
    android:paddingTop="@dimen/widget_size_5"
    android:orientation="horizontal"
    android:background="@drawable/shape_bottom_background">

    <LinearLayout
        android:id="@+id/tab_project"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <ImageButton
            android:id="@+id/ibt_project"
            android:layout_width="@dimen/widget_size_32"
            android:layout_height= "@dimen/widget_size_32"
            android:background="@null"
            android:src="@drawable/ic_bottom_project"
            android:clickable="false"
            android:elevation="@dimen/widget_size_40"
            tools:targetApi="lollipop" />
        <TextView
            android:id="@+id/tv_project"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/widget_size_3"
            android:textSize="@dimen/font_size_14"
            android:textColor="@color/colorBlack"
            android:text="@string/bottom_menu_project"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_organization"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <ImageButton
            android:id="@+id/ibt_organization"
            android:layout_width="@dimen/widget_size_32"
            android:layout_height= "@dimen/widget_size_32"
            android:background="@null"
            android:src="@drawable/ic_bottom_group"
            android:clickable="false"/>
        <TextView
            android:id="@+id/tv_organization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/widget_size_3"
            android:textSize="@dimen/font_size_14"
            android:textColor="@color/colorBlack"
            android:text="@string/bottom_menu_organization"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/tab_self"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <ImageButton
            android:id="@+id/ibt_self"
            android:layout_width="@dimen/widget_size_32"
            android:layout_height= "@dimen/widget_size_32"
            android:background="@null"
            android:src="@drawable/ic_bottom_self"
            android:clickable="false"/>
        <TextView
            android:id="@+id/tv_self"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/widget_size_3"
            android:textSize="@dimen/font_size_14"
            android:textColor="@color/colorBlack"
            android:text="@string/bottom_menu_self"/>
    </LinearLayout>

</LinearLayout>